--- a/duan/src/app/shared/header.component.html
+++ b/duan/src/app/shared/header.component.html
@@ -1,10 +1,10 @@
-<header class="main-header">
-  <div class="logo">ShopGood</div>
+<header class="lamborghini-header">
+  <div class="logo">Lamborghini</div>
   <nav class="nav">
-    <a href="#">Trang chủ</a>
-    <a href="#">Sản phẩm</a>
-    <a href="#">Khuyến mãi</a>
-    <a href="#">Liên hệ</a>
-    <a href="#">Đăng nhập</a>
+    <a href="#">Models</a>
+    <a href="#">Ownership</a>
+    <a href="#">Motorsport</a>
+    <a href="#">Experience</a>
+    <a href="#">Dealers</a>
   </nav>
 </header>
