--- a/duan/src/app/shared/header.component.html
+++ b/duan/src/app/shared/header.component.html
@@ -1,10 +1,13 @@
 <header class="lamborghini-header">
-  <div class="logo">Lamborghini</div>
-  <nav class="nav">
-    <a href="#">Models</a>
-    <a href="#">Ownership</a>
-    <a href="#">Motorsport</a>
-    <a href="#">Experience</a>
-    <a href="#">Dealers</a>
-  </nav>
+  <div class="header-left">
+    <img src="https://cdn-icons-png.flaticon.com/512/1828/1828859.png" alt="Menu" class="menu-icon" />
+    <span class="menu-text">MENU</span>
+  </div>
+  <div class="header-center">
+    <img src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/logos/2024/03_26/logo_header_01.svg" alt="Lamborghini Logo" class="logo-bull" />
+  </div>
+  <div class="header-right">
+    <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="Tài khoản" class="icon" />
+    <img src="https://cdn-icons-png.flaticon.com/512/622/622669.png" alt="Tìm kiếm" class="icon" />
+  </div>
 </header>
